# secret-santa

./: .gitignore  README.md  pyproject.toml  secret_santa.py
santa_common/: email.py  houses.py  matchmaker.py  people.py
test/: conftest.py
test/santa_common/: test_email.py
test/santa_common/__snapshots__/: test_email.ambr
