[tool.poetry]
authors = ["adveres"]
description = "Lets groups of people play Secret Santa."
name = "secret-santa"
license = "GNU GPLv3"
readme = "README.md"
repository = "https://github.com/adveres/secret-santa"
version = "0.1.0"


[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.5.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
syrupy = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
